indexing, complex numbers

--- a/00_vorbemerkungen.tex
+++ b/00_vorbemerkungen.tex
@@ -1,10 +1,15 @@
 %!TEX root = main.tex
-\chapter{Vorbemerkungen}
+\chapter*{Vorbemerkungen}
 
-Viele der rein mathematischen Bemerkungen, Aussagen und Beispele sind Abgeleitet aus \cite{merziger2024repetitorium} und \cite{gollmann2017mathematik}. 
+\section*{Quellen}
+
+Viele der rein mathematischen Bemerkungen, Aussagen und Beispiele sind Abgeleitet aus \cite{merziger2024repetitorium} und \cite{gollmann2017mathematik}. Im Literaturverzeichnis finden sich Selbstverständlich andere zitierte Arbeiten.
 
 \section*{Errata}
-Bitte alle Fehler gerne entweder an \texttt{ptrk.lechner@gmail.com} melden oder direkt einen \emph{issue} auf github öffnen oder sehr gerne selbst ändern und einen \emph{pull request} machen.
+
+Bezüglich etwaigen Fehlern bitte einen \emph{issue} auf github zu eröffnen: \href{https://github.com/hrtlacek/matheFuerTonmeisterinnen/issues}{hier}. Größere Kommentare, Zweifel an Richtigkeit, Feedback etc, sehr gerne auch direkt per mail: \texttt{ptrk.lechner@gmail.com}.
+
+Sehr gerne können Fehler, Korrekturen und Ergänzungen auch selbst geändert werden und ein \emph{pull request} gemacht werden.
 
 \section*{Soundbeispiele}
 
@@ -24,3 +29,5 @@ Soundbeispiele sind in der Programmiersprache \texttt{FAUST} erstellt. Durch cli
 Geneigten LeserInnen sei besonders empfohlen auch auf den 'Diagramm' button zu clicken um ein Blockdiagramm zu sehen dass dem Code/dem jeweiligen Konzept Entspricht.
 
 
+\section*{Contributors}
+Hier finden sich hoffentlich bald Menschen die diesen Text gelesen haben und Verbesserungsvorschläge gemacht haben.
