--- a/pythonCheat.tex
+++ b/pythonCheat.tex
@@ -20,6 +20,9 @@
     \texttt{[]} & \texttt{x[5] = 3} & Element aus array anzeigen holen oder bearbeiten. Im Bsp. wird dem 6. Element des array \texttt{x} der Wert 3 zugewiesen. \\ \hline
     \texttt{random.random()} & \texttt{random.random(50)} & Erzeuge 50 gleichverteilte Zufallszahlen im halboffenen Intervall $[0.0, 1.0)$. \\ \hline
     \texttt{**} & \texttt{x**3} & Exponenzieren. Im Bsp.: $x^3$. \\ \hline
+    \texttt{1j} & \texttt{z = 3+5j} & Die Zahl $i$. \\ \hline
+    \texttt{abs()} & \texttt{r = abs(z)} & Berechnet den Betrag von \texttt{z}. \\ \hline
+    \texttt{angle()} & \texttt{phi = angle(z)} & Berechnet das Argument von \texttt{z}. \\ \hline
 
     \end{tabular}
 \end{table}
