--- a/references.bib
+++ b/references.bib
@@ -63,9 +63,25 @@
    note = "[Online; abgerufen am 25. Oktober 2024]"
  }
 
+@misc{enwiki:atan2,
+    author = "{Wikipedia contributors}",
+    title = "Atan2 --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    url = "https://en.wikipedia.org/w/index.php?title=Atan2&oldid=1260483062",
+    note = "[Online; accessed 15-December-2024]"
+  }
+
 @book{Westermmann2008,
   author = "Thomas Westermann",
   title = "Mathematik für Ingenieure",
   year = {2008},
   publisher={Springer}
 }
+
+@misc{ enwiki:sincFilter,
+    author = "{Wikipedia contributors}",
+    title = "Sinc filter --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Sinc_filter&oldid=1245290540}",
+    note = "[Online; accessed 15-December-2024]"
+  }
