--- a/main.tex
+++ b/main.tex
@@ -480,16 +480,17 @@ literate={ϵ}{$\epsilon$}1
 \include{lesson1}
 \include{lesson2}
 \include{lesson3}
-\include{lesson4}
-\include{lesson5}
-\include{lesson6}
-\part{Semester II}
-\include{lesson7}
-\include{lesson8}
-\include{lesson9}
-\include{lesson10}
-\include{lesson11}
-\include{lesson12}
+% \include{lesson4}
+% \include{lesson5}
+% \include{lesson6}
+% \part{Semester II}
+% \include{lesson7}
+% \include{lesson8}
+% \include{lesson9}
+% \include{lesson10}
+% \include{lesson11}
+% \include{lesson12}
+
 % \include{lesson_DiffEq}
 
 \include{Anhang_A}
