typos and errors

--- a/lesson1.tex
+++ b/lesson1.tex
@@ -159,12 +159,12 @@ Die \emph{Abbildung} oder \emph{Funktion} $f$ bildet die Menge $D$ auf die Menge
 Man schreibt $f\coloneqq x \mapsto y$ oder $f(x) = y$.
 
 \begin{itemize}
-    \item $D$ \index{Definitionsbereich}, \index{Definitionsmenge}
-    \item $Z$ \index{Zielmenge}
-    \item $f(A)$ \index{Bildmenge} (wobei stets $f(A)=B, B \in Z$, heißt: Die Bildmenge ist eine Teilmenge der Zielmenge.)
+    \item $D$ Definitionsbereich, Definitionsmenge
+    \item $Z$ Zielmenge
+    \item $f(A)$ Bildmenge (wobei stets $f(A)=B, B \in Z$, heißt: Die Bildmenge ist eine Teilmenge der Zielmenge.)
     \item $x$ unabhängige Variable
     \item $y$ abhängige Variable
-    \item $f(x) = y$ \index{Funktionsgleichung}
+    \item $f(x) = y$ Funktionsgleichung
 \end{itemize}
 
 
@@ -184,8 +184,8 @@ Man schreibt $f\coloneqq x \mapsto y$ oder $f(x) = y$.
 \subsection{Gerade und Ungerade Funktionen}\label{subsec:geradeUngerade}
 Von \href{https://de.wikipedia.org/wiki/Gerade\_und\_ungerade\_Funktionen}{Wikipedia}, um zu demonstrieren dass das zuvor gelernte ständig anzutreffen ist:
 
-\emph{"Eine reelle Funktion $f\colon D\to \mathbb {R} $ mit einer bezüglich der Null symmetrischen Definitionsmenge 
-$ D\subseteq \mathbb {R}$ heißt gerade, wenn für alle Argumente $ x\in D$  $f(-x)=f(x)$."} \\
+\emph{'Eine reelle Funktion $f\colon D\to \mathbb {R} $ mit einer bezüglich der Null symmetrischen Definitionsmenge 
+$ D\subseteq \mathbb {R}$ heißt gerade, wenn für alle Argumente $ x\in D$  $f(-x)=f(x)$.'} \\
 
 Kurz:
 \begin{itemize}
@@ -217,7 +217,7 @@ $f(x)$ heißt periodisch mit Periode $p>0$ wenn für alle $ x \in \mathbb{R}$ gi
 \subsection{Linearität}
 Aus Tontechnischer/Signalverarbeitungssicht ist hier eine wichtige Unterscheidung zu machen. Manche Rechenoperationen sind \emph{linear} andere nicht. 
 \index{Linearität} ist die Eigenschaft eines Systems \emph{proportional} zu reagieren.
-Wenn also der Input an einem linearen System steigt, steigt der Output proportional dazu. Das einfache System idealer 'Verstärker' soll uns als Beispiel dienen:
+Wenn also der Input an einem linearen System steigt, steigt der Output proportional dazu. Das einfache System 'idealer Verstärker' soll uns als Beispiel dienen:
 $$f(x) = x \cdot a$$ wobei $a$ hier der Verstärkungsfaktor wäre. Nennen wir den Output $y$, also sei $y \coloneqq f(x)$ dann können wir sagen $$y \propto x.$$ 
 $y$ verhält sich proportional zu $x$. 
 
@@ -255,7 +255,7 @@ Ist diese Bedingung erfüllt, handelt es sich um ein lineares System. In \emph{a
 
 
 
-Die arten Mengen in Beziehung zu setzen kann verwendet werden um die unterschiedlichen Zahlen Korpora in Beziehung zu setzen:
+Die Arten Mengen in Beziehung zu setzen kann verwendet werden um die unterschiedlichen Zahlen Korpora in Beziehung zu setzen:
 
 $$
 \mathbb{N} \subset \mathbb{Z} \subset \mathbb{Q} \subset \mathbb{R} \subset \mathbb{C}
